--- a/module-nio/pom.xml
+++ b/module-nio/pom.xml
@@ -26,7 +26,7 @@
    This software consists of voluntary contributions made by many
    individuals on behalf of the Apache Software Foundation.  For more
    information on the Apache Software Foundation, please see
-   <http://www.apache.org/>.
+   <http://www.apache.org />.
  -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
@@ -34,7 +34,7 @@
   <parent>
     <groupId>org.apache.httpcomponents</groupId>
     <artifactId>httpcore</artifactId>
-    <version>4.0-alpha4-SNAPSHOT</version>
+    <version>4.0-alpha4</version>
   </parent>
   <artifactId>jakarta-httpcore-nio</artifactId>
   <name>HttpCore (NIO extensions module)</name>
@@ -54,9 +54,9 @@
   </licenses>
 
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk/module-nio</connection>
-    <developerConnection>scm:svn:http://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk/module-nio</developerConnection>
-    <url>http://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk/module-nio</url>
+    <connection>scm:svn:https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/tags/4.0-alpha4</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/tags/4.0-alpha4</developerConnection>
+    <url>https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/tags/4.0-alpha4</url>
   </scm>
 
   <dependencies>
