--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
   <groupId>org.apache.httpcomponents</groupId>
   <artifactId>httpcore</artifactId>
   <name>HttpComponents Core</name>
-  <version>4.0-alpha4</version>
+  <version>4.0-alpha5-SNAPSHOT</version>
   <description>Core components to build HTTP enabled services</description>
   <url>http://jakarta.apache.org/httpcomponents/httpcore</url>
   <inceptionYear>2005</inceptionYear>
@@ -63,9 +63,9 @@
   </issueManagement>
 
   <scm>
-    <connection>scm:svn:https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/tags/4.0-alpha4</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/tags/4.0-alpha4</developerConnection>
-    <url>https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/tags/4.0-alpha4</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk</connection>
+    <developerConnection>scm:svn:http://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk</developerConnection>
+    <url>http://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk</url>
   </scm>
 
   <modules>
