Removed references to Jakarta from the project artifact ids
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@544939 13f79535-47bb-0310-9956-ffa450edef68

--- a/module-main/pom.xml
+++ b/module-main/pom.xml
@@ -33,10 +33,10 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.httpcomponents</groupId>
-    <artifactId>httpcore</artifactId>
+    <artifactId>core</artifactId>
     <version>4.0-alpha5-SNAPSHOT</version>
   </parent>
-  <artifactId>jakarta-httpcore</artifactId>
+  <artifactId>httpcore</artifactId>
   <name>HttpCore (base module)</name>
   <inceptionYear>2005</inceptionYear>
   <description>
