--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.httpcomponents</groupId>
-  <artifactId>httpcore</artifactId>
+  <artifactId>core</artifactId>
   <name>HttpComponents Core</name>
   <version>4.0-alpha5-SNAPSHOT</version>
   <description>Core components to build HTTP enabled services</description>
