Renamed project artifactId from core to httpcomponents-core; required to generate a meaningful assembly file name
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@550104 13f79535-47bb-0310-9956-ffa450edef68

--- a/module-main/pom.xml
+++ b/module-main/pom.xml
@@ -33,7 +33,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.httpcomponents</groupId>
-    <artifactId>core</artifactId>
+    <artifactId>httpcomponents-core</artifactId>
     <version>4.0-alpha5-SNAPSHOT</version>
   </parent>
   <artifactId>httpcore</artifactId>
