--- a/pom.xml
+++ b/pom.xml
@@ -93,8 +93,10 @@
         <version>2.1</version>
         <configuration>
           <descriptors>
-            <descriptor>src/main/assembly/bin.xml</descriptor>
-            <descriptor>src/main/assembly/src.xml</descriptor>
+            <descriptor>src/main/assembly/bin-unix.xml</descriptor>
+            <descriptor>src/main/assembly/bin-win.xml</descriptor>
+            <descriptor>src/main/assembly/src-unix.xml</descriptor>
+            <descriptor>src/main/assembly/src-win.xml</descriptor>
           </descriptors>
         </configuration>
       </plugin>
