--- a/module-niossl/pom.xml
+++ b/module-niossl/pom.xml
@@ -34,7 +34,7 @@
   <parent>
     <groupId>org.apache.httpcomponents</groupId>
     <artifactId>httpcomponents-core</artifactId>
-    <version>4.0-alpha5</version>
+    <version>4.0-alpha6-SNAPSHOT</version>
   </parent>
   <artifactId>httpcore-niossl</artifactId>
   <name>HttpCore (NIO SSL extensions module)</name>
@@ -54,9 +54,9 @@
   </licenses>
 
   <scm>
-    <connection>scm:svn:https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/tags/4.0-alpha5/module-niossl</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/tags/4.0-alpha5/module-niossl</developerConnection>
-    <url>https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/tags/4.0-alpha5/module-niossl</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk/module-niossl</connection>
+    <developerConnection>scm:svn:http://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk/module-niossl</developerConnection>
+    <url>http://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk/module-niossl</url>
   </scm>
 
   <dependencies>
