fixed developer SVN link
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@554335 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 
   <scm>
     <connection>scm:svn:http://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk</connection>
-    <developerConnection>scm:svn:http://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk</developerConnection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk</developerConnection>
     <url>http://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk</url>
   </scm>
 
