fixed more <developerConnection> URLs
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@554338 13f79535-47bb-0310-9956-ffa450edef68

--- a/module-nio/pom.xml
+++ b/module-nio/pom.xml
@@ -55,7 +55,7 @@
 
   <scm>
     <connection>scm:svn:http://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk/module-nio</connection>
-    <developerConnection>scm:svn:http://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk/module-nio</developerConnection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk/module-nio</developerConnection>
     <url>http://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk/module-nio</url>
   </scm>
 
