--- a/module-niossl/pom.xml
+++ b/module-niossl/pom.xml
@@ -55,7 +55,7 @@
 
   <scm>
     <connection>scm:svn:http://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk/module-niossl</connection>
-    <developerConnection>scm:svn:http://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk/module-niossl</developerConnection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk/module-niossl</developerConnection>
     <url>http://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk/module-niossl</url>
   </scm>
 
