Removed obsolete Ant build scripts; Made inclusion of the NIOSSL module conditional (jdk 1.5+)
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@581310 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,6 @@
   <modules>
     <module>module-main</module>
     <module>module-nio</module>
-    <module>module-niossl</module>
   </modules>
 
   <build>
@@ -162,5 +161,22 @@
 
     </plugins>
   </reporting>
+
+  <profiles>
+     <profile>
+        <id>java5-compat</id>
+        <activation>
+          <!-- 
+            for some bloody reason Maven refuses to recognize 1.5+ as 
+            a valid jdk attribute even though this is supposed to be
+            supported as of Maven 2.0.7 (see MNG-1910)
+          -->
+          <jdk>!1.4</jdk>
+        </activation>
+        <modules>
+          <module>module-niossl</module>
+        </modules>
+     </profile>
+  </profiles>
 
 </project>
