--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,39 @@
           <module>module-niossl</module>
         </modules>
      </profile>
+     <profile>
+        <id>java1.4</id>
+        <activation>
+          <jdk>1.4</jdk>
+        </activation>
+        
+        <build>
+          <plugins>
+            <plugin>
+              <artifactId>maven-antrun-plugin</artifactId>
+              <executions>
+                <execution>
+                  <id>java1.4-warning</id>
+                  <phase>package</phase>
+                  <configuration>
+                    <tasks>
+                      <echo>
+=======================================================
+WARNING: Java 1.5 dependent modules are NOT included!
+=======================================================
+                      </echo>
+                    </tasks>
+                  </configuration>
+                  <goals>
+                    <goal>run</goal>
+                  </goals>
+                </execution>
+              </executions>
+            </plugin>
+          </plugins>
+        </build>
+
+     </profile>
   </profiles>
 
 </project>
