--- a/module-nio/pom.xml
+++ b/module-nio/pom.xml
@@ -42,7 +42,7 @@
   <description>
    HttpComponents Core (NIO extensions)
   </description>
-  <url>http://jakarta.apache.org/httpcomponents/httpcomponents-core/</url>
+  <url>http://hc.apache.org/httpcomponents-core/</url>
   <packaging>jar</packaging>  
 
   <licenses>
@@ -54,9 +54,9 @@
   </licenses>
 
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk/module-nio</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk/module-nio</developerConnection>
-    <url>http://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk/module-nio</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk/module-nio</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk/module-nio</developerConnection>
+    <url>http://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk/module-nio</url>
   </scm>
 
   <dependencies>
