--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
   <name>HttpComponents Core</name>
   <version>4.0-alpha7-SNAPSHOT</version>
   <description>Core components to build HTTP enabled services</description>
-  <url>http://jakarta.apache.org/httpcomponents/httpcomponents-core/</url>
+  <url>http://hc.apache.org/httpcomponents-core/</url>
   <inceptionYear>2005</inceptionYear>
   <packaging>pom</packaging>
 
@@ -63,9 +63,9 @@
   </issueManagement>
 
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk</developerConnection>
-    <url>http://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk</developerConnection>
+    <url>http://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk</url>
   </scm>
 
   <modules>
@@ -84,7 +84,7 @@
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
         <configuration>
-          <tagBase>https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/tags/</tagBase>
+          <tagBase>https://svn.apache.org/repos/asf/httpcomponents/httpcore/tags/</tagBase>
         </configuration>
       </plugin>
       <plugin>
