Set relative path to the project POM
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@609300 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
     <artifactId>project</artifactId>
     <groupId>org.apache.httpcomponents</groupId>
     <version>4.0</version>
+    <relativePath>../project/pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.httpcomponents</groupId>
