Tweaked pom and site descriptors to get the damn site plugin to work again
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@614524 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,10 @@
       </plugin>
       <plugin>
         <artifactId>maven-site-plugin</artifactId>
+        <!-- The version 2.0-beta6 of the site plugin seems utterly broken. Force the previous version
+          that at least kind of worked. Damn you Maven!!!!
+        --> 
+        <version>2.0-beta-5</version>
       </plugin>
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
