--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,11 @@
         <artifactId>maven-surefire-report-plugin</artifactId>
       </plugin>
 
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>clirr-maven-plugin</artifactId>
+      </plugin>
+
     </plugins>
   </reporting>
 
