--- a/module-nio/pom.xml
+++ b/module-nio/pom.xml
@@ -37,7 +37,7 @@
     <version>4.0-beta3-SNAPSHOT</version>
   </parent>
   <artifactId>httpcore-nio</artifactId>
-  <name>HttpCore (NIO extensions module)</name>
+  <name>HttpCore NIO</name>
   <inceptionYear>2005</inceptionYear>
   <description>
    HttpComponents Core (NIO extensions)
@@ -48,7 +48,7 @@
   <licenses>
     <license>
       <name>Apache License</name>
-      <url>../LICENSE.txt</url>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
@@ -114,6 +114,18 @@
           <includes>
             <include>**/TestAll.java</include>
           </includes>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <extensions>true</extensions>
+        <configuration>
+          <instructions>
+            <Bundle-Name>Apache ${pom.name}</Bundle-Name>
+            <Require-Bundle>org.apache.httpcomponents.httpcore</Require-Bundle>
+            <Export-Package>org.apache.http.nio.*, org.apache.http.impl.nio.*</Export-Package>
+          </instructions>
         </configuration>
       </plugin>
     </plugins>
