--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,9 @@
       </plugin>
       <plugin>
         <artifactId>maven-javadoc-plugin</artifactId>
+        <configuration>
+          <aggregate>true</aggregate>
+        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-site-plugin</artifactId>
@@ -102,14 +105,14 @@
       </plugin>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.1</version>
+        <version>2.2-beta-2</version>
         <configuration>
           <descriptors>
-            <descriptor>src/main/assembly/bin-unix.xml</descriptor>
-            <descriptor>src/main/assembly/bin-win.xml</descriptor>
-            <descriptor>src/main/assembly/src-unix.xml</descriptor>
-            <descriptor>src/main/assembly/src-win.xml</descriptor>
+            <descriptor>src/main/assembly/bin.xml</descriptor>
+            <descriptor>src/main/assembly/osgi-bin.xml</descriptor>
+            <descriptor>src/main/assembly/src.xml</descriptor>
           </descriptors>
+          <tarLongFileMode>gnu</tarLongFileMode>
         </configuration>
       </plugin>
 
