Fixed osgi bundle symbolic name; changed osgi bundle file name to correspond to the symbolic name
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@694018 13f79535-47bb-0310-9956-ffa450edef68

--- a/module-osgi-bundle/pom.xml
+++ b/module-osgi-bundle/pom.xml
@@ -80,14 +80,14 @@
         <configuration>
           <instructions>
             <Bundle-Name>Apache ${pom.name}</Bundle-Name>
-            <Bundle-SymbolicName>${pomartifactId}</Bundle-SymbolicName>
+            <Bundle-SymbolicName>${pom.groupId}.httpcore</Bundle-SymbolicName>
             <_exportcontents>org.apache.http.*</_exportcontents>
             <Embed-Dependency>*;scope=compile|runtime;inline=false</Embed-Dependency>
           </instructions>
         </configuration>
       </plugin>
     </plugins>
-    <finalName>org.apache.httpcore_${pom.version}</finalName>
+    <finalName>org.apache.httpcomponents.httpcore_${pom.version}</finalName>
   </build>
 
 </project>
