--- a/module-osgi-bundle/pom.xml
+++ b/module-osgi-bundle/pom.xml
@@ -34,7 +34,7 @@
   <parent>
     <groupId>org.apache.httpcomponents</groupId>
     <artifactId>httpcomponents-core</artifactId>
-    <version>4.0-beta3-SNAPSHOT</version>
+    <version>4.0-beta3</version>
   </parent>
   <artifactId>httpcore-osgi</artifactId>
   <name>HttpCore OSGi bundle</name>
