--- a/pom.xml
+++ b/pom.xml
@@ -157,7 +157,41 @@
           </execution>
         </executions>
       </plugin>
-
+      <plugin>
+        <groupId>com.agilejava.docbkx</groupId>
+        <artifactId>docbkx-maven-plugin</artifactId>
+        <version>2.0.8</version>
+        <executions>
+          <execution>
+            <goals>
+                <goal>generate-html</goal>
+                <goal>generate-pdf</goal>
+            </goals>
+            <phase>pre-site</phase>
+          </execution>
+        </executions>
+        <dependencies>
+          <dependency>
+            <groupId>org.docbook</groupId>
+            <artifactId>docbook-xml</artifactId>
+            <version>4.4</version>
+            <scope>runtime</scope>
+          </dependency>
+        </dependencies>
+        <configuration>
+          <includes>index.xml</includes>
+          <chunkedOutput>true</chunkedOutput>
+          <xincludeSupported>true</xincludeSupported>
+          <htmlCustomization>src/docbkx/resources/xsl/html_chunk.xsl</htmlCustomization>
+          <foCustomization>src/docbkx/resources/xsl/fopdf.xsl</foCustomization>
+          <entities>
+            <entity>
+              <name>version</name>
+              <value>${pom.version}</value>
+            </entity>
+          </entities>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
@@ -188,6 +222,13 @@
 
       <plugin>
         <artifactId>maven-javadoc-plugin</artifactId>
+        <configuration>
+          <source>1.5</source>
+          <aggregate>true</aggregate>
+          <links>
+            <link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
+          </links>
+        </configuration>
       </plugin>
 
       <plugin>
