Added a CSS for HttpCore tutorial
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@739823 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -182,8 +182,9 @@
           <includes>index.xml</includes>
           <chunkedOutput>true</chunkedOutput>
           <xincludeSupported>true</xincludeSupported>
-          <htmlCustomization>src/docbkx/resources/xsl/html_chunk.xsl</htmlCustomization>
           <foCustomization>src/docbkx/resources/xsl/fopdf.xsl</foCustomization>
+          <htmlCustomization>src/docbkx/resources/xsl/html_chunk.xsl</htmlCustomization>
+          <htmlStylesheet>css/hc-tutorial.css</htmlStylesheet>
           <entities>
             <entity>
               <name>version</name>
