--- a/module-main/pom.xml
+++ b/module-main/pom.xml
@@ -34,7 +34,7 @@
   <parent>
     <groupId>org.apache.httpcomponents</groupId>
     <artifactId>httpcomponents-core</artifactId>
-    <version>4.0</version>
+    <version>4.1-SNAPSHOT</version>
   </parent>
   <artifactId>httpcore</artifactId>
   <name>HttpCore</name>
@@ -54,9 +54,9 @@
   </licenses>
 
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/httpcomponents/httpcore/tags/4.0/module-main</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/httpcomponents/httpcore/tags/4.0/module-main</developerConnection>
-    <url>http://svn.apache.org/repos/asf/httpcomponents/httpcore/tags/4.0/module-main</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk/module-main</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk/module-main</developerConnection>
+    <url>http://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk/module-main</url>
   </scm>
 
   <dependencies>
