HTTPCORE-185: Set source and output encoding in POMs
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@747506 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
     <module>module-osgi-bundle</module>
   </modules>
 
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+  </properties>
+
   <build>
     <plugins>
       <!-- Add NOTICE and LICENSE to generated JAR -->
