HTTPCORE-189: Upgrade POMs to use Clover2
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@747594 13f79535-47bb-0310-9956-ffa450edef68

--- a/module-nio/pom.xml
+++ b/module-nio/pom.xml
@@ -151,10 +151,10 @@
       </plugin>
 
       <plugin>
-        <artifactId>maven-clover-plugin</artifactId>
+        <groupId>com.atlassian.maven.plugins</groupId>
+        <artifactId>maven-clover2-plugin</artifactId>
         <configuration>
           <jdk>1.5</jdk>
-          <licenseLocation>${clover.license}</licenseLocation>
         </configuration>
       </plugin>
 
