--- a/pom.xml
+++ b/pom.xml
@@ -165,7 +165,8 @@
         </configuration>
       </plugin>
       <plugin>
-        <artifactId>maven-clover-plugin</artifactId>
+        <groupId>com.atlassian.maven.plugins</groupId>
+        <artifactId>maven-clover2-plugin</artifactId>
         <configuration>
           <flushPolicy>threaded</flushPolicy>
           <flushInterval>100</flushInterval>
@@ -178,6 +179,7 @@
             <goals>
               <goal>instrument</goal>
               <goal>aggregate</goal>
+              <goal>save-history</goal>
             </goals>
           </execution>
         </executions>
