--- a/httpcore-nio/pom.xml
+++ b/httpcore-nio/pom.xml
@@ -34,7 +34,7 @@
   <parent>
     <groupId>org.apache.httpcomponents</groupId>
     <artifactId>httpcomponents-core</artifactId>
-    <version>4.0.1-SNAPSHOT</version>
+    <version>4.0.1</version>
   </parent>
   <artifactId>httpcore-nio</artifactId>
   <name>HttpCore NIO</name>
