--- a/httpcore/pom.xml
+++ b/httpcore/pom.xml
@@ -34,7 +34,7 @@
   <parent>
     <groupId>org.apache.httpcomponents</groupId>
     <artifactId>httpcomponents-core</artifactId>
-    <version>4.0.1</version>
+    <version>4.0.2-SNAPSHOT</version>
   </parent>
   <artifactId>httpcore</artifactId>
   <name>HttpCore</name>
