--- a/httpcore-osgi/pom.xml
+++ b/httpcore-osgi/pom.xml
@@ -80,7 +80,7 @@
           <instructions>
             <Bundle-Name>Apache ${pom.name}</Bundle-Name>
             <Bundle-SymbolicName>${pom.groupId}.httpcore</Bundle-SymbolicName>
-            <_exportcontents>org.apache.http.*</_exportcontents>
+            <_exportcontents>org.apache.http.*;version=${project.version}</_exportcontents>
             <Embed-Dependency>*;scope=compile|runtime;inline=false</Embed-Dependency>
           </instructions>
         </configuration>
