--- a/pom.xml
+++ b/pom.xml
@@ -243,6 +243,7 @@
          <reportSets>
            <reportSet>
              <reports>
+               <report>dependencies</report>
                <report>project-team</report>
                <report>mailing-list</report>
                <report>issue-tracking</report>
