--- a/httpcore-nio/pom.xml
+++ b/httpcore-nio/pom.xml
@@ -123,10 +123,10 @@
         <configuration>
           <archive>
             <manifestEntries>
-              <Specification-Title>Apache HttpCore NIO</Specification-Title>
+              <Specification-Title>HttpComponents HttpCore NIO</Specification-Title>
               <Specification-Version>${pom.version}</Specification-Version>
               <Specification-Vendor>The Apache Software Foundation</Specification-Vendor>
-              <Implementation-Title>Apache HttpCore NIO</Implementation-Title>
+              <Implementation-Title>HttpComponents HttpCore NIO</Implementation-Title>
               <Implementation-Version>${pom.version}</Implementation-Version>
               <Implementation-Vendor>The Apache Software Foundation</Implementation-Vendor>
               <Implementation-Vendor-Id>org.apache</Implementation-Vendor-Id>
