--- a/httpcore/pom.xml
+++ b/httpcore/pom.xml
@@ -30,7 +30,7 @@
   <parent>
     <groupId>org.apache.httpcomponents</groupId>
     <artifactId>httpcomponents-core</artifactId>
-    <version>4.1-alpha1</version>
+    <version>4.1-alpha2-SNAPSHOT</version>
   </parent>
   <artifactId>httpcore</artifactId>
   <name>HttpCore</name>
