--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
   <groupId>org.apache.httpcomponents</groupId>
   <artifactId>httpcomponents-core</artifactId>
   <name>HttpComponents Core</name>
-  <version>4.1-alpha1</version>
+  <version>4.1-alpha2-SNAPSHOT</version>
   <description>Core components to build HTTP enabled services</description>
   <url>http://hc.apache.org/httpcomponents-core/</url>
   <inceptionYear>2005</inceptionYear>
@@ -60,9 +60,9 @@
   </issueManagement>
 
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/httpcomponents/httpcore/tags/4.1-alpha1</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/httpcomponents/httpcore/tags/4.1-alpha1</developerConnection>
-    <url>http://svn.apache.org/repos/asf/httpcomponents/httpcore/tags/4.1-alpha1</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk</developerConnection>
+    <url>http://svn.apache.org/repos/asf/httpcomponents/httpcore/tags/trunk</url>
   </scm>
 
   <modules>
