HTTPCORE-178: benchmark improvements
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@905758 13f79535-47bb-0310-9956-ffa450edef68

--- a/httpcore-benchmark/pom.xml
+++ b/httpcore-benchmark/pom.xml
@@ -56,9 +56,27 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpcore-ab</artifactId>
+      <version>${pom.version}</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-server</artifactId>
       <version>7.0.1.v20091125</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.5.10</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-nop</artifactId>
+      <version>1.5.10</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
@@ -83,6 +101,23 @@
           <optimize>${maven.compile.optimize}</optimize>
           <showDeprecations>${maven.compile.deprecation}</showDeprecations>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.1.1</version>
+        <executions>
+          <execution>
+            <id>test-run</id>
+            <phase>test</phase>
+            <goals>
+              <goal>java</goal>
+            </goals>
+            <configuration>
+              <mainClass>org.apache.http.benchmark.Benchmark</mainClass>        
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
