--- a/httpcore-osgi/pom.xml
+++ b/httpcore-osgi/pom.xml
@@ -84,6 +84,7 @@
           <instructions>
             <Bundle-Name>Apache ${pom.name}</Bundle-Name>
             <Bundle-SymbolicName>${pom.groupId}.httpcore</Bundle-SymbolicName>
+            <Import-Package>!org.apache.http*,*</Import-Package>
             <_exportcontents>org.apache.http.*;version=${project.version}</_exportcontents>
             <Embed-Dependency>*;scope=compile|runtime;inline=false</Embed-Dependency>
           </instructions>
